style/ fix spacing for staking page & loader for dolphin

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,5 +1,5 @@
 .sortable-table-wrapper {
-  max-width: 1290px;
+  max-width: 1232px;
 }
 
 .border-5 {
